# src/semanticserver/main.py
@@ -3,16 +3,16 @@ import os
 from fastapi import FastAPI, HTTPException
 from semanticserver.config import load_config
 from semanticserver.embeddings.sentence_transformer import MiniLMEmbedder
-from semanticserver.embeddings.chroma import Chroma
+from semanticserver.embeddings.semantic_db import SemanticDB
 
-from semanticserver.models.generated import EmbedRequest, Scene, AnalysisRequest, AnalysisResult
+from semanticserver.models.generated import EmbedRequest, Fragment, AnalysisRequest, AnalysisResult
 
 START_DIRECTORY = os.getcwd()
 
 app = FastAPI()
 config = load_config()
 embedder = MiniLMEmbedder(config.embedding_model)
-chroma = Chroma(START_DIRECTORY)
+semantic_db = SemanticDB(START_DIRECTORY)
 
 @app.get("/health")
 def health():
@@ -23,30 +23,30 @@ def embed_text(req: EmbedRequest):
     vector = embedder.embed(req.text)
     return {"embedding": vector}
 
-@app.post("/scene")
-def upload_scene(req: Scene):
+@app.post("/fragment")
+def upload_fragment(req: Fragment):
     try:
-        chroma.upload_scene(req)
+        semantic_db.upload_fragment(req)
         return {"status": "ok"}
-    except Chroma.ChromaError as e:
+    except SemanticDB.SemanticDBError as e:
         raise HTTPException(500, str(e))
 
-@app.get("/scene/{scene_id}")
-def download_scene(scene_id: str):
+@app.get("/fragment/{fragment_id}")
+def download_fragment(fragment_id: str):
     try:
-        return chroma.download_scene(scene_id)
-    except Chroma.ChromaError as e:
+        return semantic_db.download_fragment(fragment_id)
+    except SemanticDB.SemanticDBError as e:
         raise HTTPException(500, str(e))
 
 @app.post("/analyze")
 def analyze(req: AnalysisRequest):
     try:
-        response = chroma.analyze_scene(req)
+        response = semantic_db.analyze_fragment(req)
         for r in response:
             print(f'AnalyzeResult: {r}')
         if req.min_score is not None:
             response = [r for r in response.neighbors if r.similarity >= req.min_score]
         return AnalysisResult(neighbors=response)
-    except Chroma.ChromaError as e:
+    except SemanticDB.SemanticDBError as e:
         raise HTTPException(500, str(e))
 
